# fast_zero

./: README.md  pyproject.toml
src/fast_zero/: app.py
tests/: test_app.py
